[package]
name = "hl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bpaf = { version = "0.9.4", features = ["derive"] }
itertools = "0.11.0"
libc = "0.2.147"
thiserror = "1.0.47"
bytesize = { version = "1.3", optional = true }

[features]
default = ["size-color"]
size-color = ["dep:bytesize"]
